Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-58734

VNC platform plugin fails to build on big-endian machines (PowerPC)

    XMLWordPrintable

Details

    • Bug
    • Resolution: Done
    • P2: Important
    • 5.9.0 Beta 1
    • 5.8.0
    • Core: Plugins, Other
    • None
    • gcc version 6.2.0 20160822 (AOSC OS, Core) (GCC)
    • 6f64bfa654fb7e20bb75ec3b0544b81482babb44

    Description

      When attempting to build Qt 5.8.0 on a big-endian PowerPC machine, the build fails when building the VNC platform plugin (found in qtbase, src/plugins/platforms/vnc).

      The build fails with the following command:

      g++ -c -pipe -O2 -pipe -Wno-error -fstack-protector-strong --param=ssp-buffer-size=4 -fomit-frame-pointer -O2 -m32 -mtune=G4 -mno-altivec -msecure-plt -mhard-float -fira-loop-pressure -fira-hoist-pressure -ftree-vectorize -specs=/usr/lib/autobuild3/specs/hardened-cc1 -fno-delete-null-pointer-checks -std=c++1z -fvisibility=hidden -fvisibility-inlines-hidden -fno-exceptions -Wall -W -Wvla -Wdate-time -Wshift-overflow=2 -Wduplicated-cond -D_REENTRANT -fPIC -DQT_NO_FOREACH -DQT_NO_EXCEPTIONS -D_LARGEFILE64_SOURCE -D_LARGEFILE_SOURCE -DQT_NO_DEBUG -DQT_PLUGIN -DQT_SERVICE_SUPPORT_LIB -DQT_THEME_SUPPORT_LIB -DQT_FB_SUPPORT_LIB -DQT_EVENTDISPATCHER_SUPPORT_LIB -DQT_FONTDATABASE_SUPPORT_LIB -DQT_INPUT_SUPPORT_LIB -DQT_GUI_LIB -DQT_DEVICEDISCOVERY_SUPPORT_LIB -DQT_NETWORK_LIB -DQT_CORE_LIB -I. -I../../../../include -I../../../../include/QtServiceSupport -I../../../../include/QtServiceSupport/5.8.0 -I../../../../include/QtServiceSupport/5.8.0/QtServiceSupport -I../../../../include/QtThemeSupport -I../../../../include/QtThemeSupport/5.8.0 -I../../../../include/QtThemeSupport/5.8.0/QtThemeSupport -I../../../../include/QtFbSupport -I../../../../include/QtFbSupport/5.8.0 -I../../../../include/QtFbSupport/5.8.0/QtFbSupport -I../../../../include/QtEventDispatcherSupport -I../../../../include/QtEventDispatcherSupport/5.8.0 -I../../../../include/QtEventDispatcherSupport/5.8.0/QtEventDispatcherSupport -I../../../../include/QtFontDatabaseSupport -I../../../../include/QtFontDatabaseSupport/5.8.0 -I../../../../include/QtFontDatabaseSupport/5.8.0/QtFontDatabaseSupport -I../../../../include/QtInputSupport -I../../../../include/QtInputSupport/5.8.0 -I../../../../include/QtInputSupport/5.8.0/QtInputSupport -I../../../../include/QtGui/5.8.0 -I../../../../include/QtGui/5.8.0/QtGui -I../../../../include/QtGui -I../../../../include/QtDeviceDiscoverySupport -I../../../../include/QtDeviceDiscoverySupport/5.8.0 -I../../../../include/QtDeviceDiscoverySupport/5.8.0/QtDeviceDiscoverySupport -I../../../../include/QtCore/5.8.0 -I../../../../include/QtCore/5.8.0/QtCore -I../../../../include/QtNetwork -I../../../../include/QtCore -I.moc -I/usr/include/libdrm -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/harfbuzz -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/harfbuzz -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I/usr/include/freetype2 -I/usr/include/libpng16 -I/usr/include/harfbuzz -I/usr/include/glib-2.0 -I/usr/lib/glib-2.0/include -I../../../../mkspecs/linux-g++ -o .obj/main.o main.cpp
      In file included from qvnc_p.h:43:0,
                       from main.cpp:42:
      qvncscreen.h:76:22: error: expected ';' at end of member declaration
           bool swapBytes() const
                            ^~~~~
      make: *** [Makefile:1855: .obj/main.o] Error 1
      

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            srutledg Shawn Rutledge
            mingcongbai Mingcong Bai
            Votes:
            0 Vote for this issue
            Watchers:
            3 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes